k8/vm/dotnet-iis-app-vm-service.yaml
kind: Service
apiVersion: v1
metadata:
  labels:
    app: dotnet-iis-app
    app.kubernetes.io/component: dotnet-iis-app
    app.kubernetes.io/instance: dotnet-iis-app
    app.kubernetes.io/name: dotnet-iis-app
    app.kubernetes.io/part-of: app
  name: dotnet-iis-app
  namespace: demo-vm-ossm
spec:
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
  internalTrafficPolicy: Cluster
  type: ClusterIP
  selector:
    vm.kubevirt.io/name: dotnet-iis-app-vm
